--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@noble/ciphers": "^0.5.2",
-    "@scure/base": "^1.1.6"
+    "@scure/base": "^1.1.6",
+    "nanoid": "^5.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7"
   }
 }
