--- a/vscode-backup.jsonc
+++ b/vscode-backup.jsonc
@@ -7,7 +7,7 @@
     "python": "html",
     "javascript": "javascript",
     "css": "css",
-    "html": "HTML",
+    "html": "HTML"
   },
   "grammarly.files.include": ["**/*.md", "**/*.md", "**/*.txt", "**/*.md", "**/*.mdx"],
   
