--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@scure/base": "^1.1.6",
     "@types/bun": "^1.1.3",
     "nanoid": "^5.0.7",
-    "protobufjs": "^7.3.0"
+    "protobufjs": "^7.3.0",
+    "randomatic": "^3.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7"
