--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "arc",
-  "version": "1.0.0",
-  "description": "Adam's Run Commands",
-  "main": "src/index.ts",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@noble/ciphers": "^0.5.2",
-    "@scure/base": "^1.1.6",
-    "@types/bun": "^1.1.3",
-    "nanoid": "^5.0.7",
-    "protobufjs": "^7.3.0",
-    "randomatic": "^3.1.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.12.7"
-  }
+	"name": "arc",
+	"version": "1.0.0",
+	"description": "Adam's Run Commands",
+	"main": "src/index.ts",
+	"scripts": {
+		"format": "biome check --write --unsafe ."
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@noble/ciphers": "^0.5.2",
+		"@scure/base": "^1.1.6",
+		"@types/bun": "^1.1.3",
+		"nanoid": "^5.0.7",
+		"protobufjs": "^7.3.0",
+		"randomatic": "^3.1.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20.12.7"
+	}
 }
